--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>My Portfolio</title>
+  <title>Emmanuel's Portfolio</title>
   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32"/>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
