Changed title and some list items

--- a/about.html
+++ b/about.html
@@ -33,15 +33,14 @@
   </header>
     <main>
       <div class="main-content">
-        <h1>About</h1>
+        <h1>About Emmanuel</h1>
           <p>
-            This page is about me and my skills/experience.
+            This page is about me and my skills/experience. Also a few of my hobbies.
           </p>
           <ul class="about_list">
-            <li>Front-end development</li>
-            <li>Back-end development</li>
-            <li>Test driven development</li>
-            <li>Climbing</li>
+            <li>Basketball</li>
+            <li>Going to the Gym</li>
+            <li>Building computers</li>
           </ul>
           <a href="files.cv.pdf" class="button" download>Download my CV
           </a>
