--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     </nav>
     </header>
       <div class="main-content">
-    <h1>Contact</h1>
+    <h1>Contact Emmanuel!</h1>
         Phone - <a
         href="tel:5745277894">574 527 7894
         </a>
