--- a/work.html
+++ b/work.html
@@ -33,7 +33,7 @@
     </header>
 
     <section>
-      <h1 class="main-content">Work</h1>
+      <h1 class="main-content"> Emmanuel's Work</h1>
       <div class="grid">
         <div class="grid_item">
           <h2>Project 1</h2>
