replaced placeholder link with image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <main>
     <div class="profile">
-      <img src="http://via.placeholder.com/150x150" class="profile_portrait" alt="Portrait of me">
+      <img src="img/stockimg.jpg" class="profile_portrait" alt="Portrait of me">
       <h1>Hello World!</h1>
       <p>
       My name is Emmannuel Nunez. I am a <span>web</span> developer from Indiana.
