added lang attribute

--- a/work.html
+++ b/work.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
   <title>My Portfolio</title>
@@ -69,7 +69,7 @@
       <img src="img/twittericon.svg" alt="Twitter">
   </div>
     </footer>
-    
+
   <script src="js/tota11y.min.js"></script>
   </body>
 
