--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 
       </div>
         <div class="main-content">
-          <form action="" method="post" id="contact-form">
+          <form action="#" method="post" id="contact-form">
             <label class="standard-label" for="contact-email">Email: </label>
             <input type="email" id="contact-email" required> <br>
 
@@ -59,6 +59,7 @@
 
             <input type="submit" value="Send message">
           </form>
+        </div>
     <footer class="page-footer">
         <p>
           You can find me here!
