corrected spelling error

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <img src="img/stockimg.jpg" class="profile_portrait" alt="Portrait of me">
       <h1>Hello World!</h1>
       <p>
-      My name is Emmannuel Nunez. I am a <span>web</span> developer from Indiana.
+      My name is Emmanuel Nunez. I am a <span>web</span> developer from Indiana.
       </p>
       <a href="#">Check out some of my code!</a>
     </div>
