--- a/contact.html
+++ b/contact.html
@@ -48,14 +48,14 @@
       </div>
         <div class="main-content">
           <form action="#" method="post" id="contact-form">
-            <label class="standard-label" for="contact-email">Email: </label>
+            <label class="standard-label" for="contact-email">Email: </label> <br>
             <input type="email" id="contact-email" required> <br>
 
-            <label class="standard-label">Telephone: </label>
+            <label class="standard-label">Telephone: </label> <br>
             <input type="tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}"> <br>
 
-            <label class="standar-label">Message: </label>
-            <textarea maxlength="240" required></textarea>
+            <label class="standar-label">Message: </label> <br>
+            <textarea maxlength="240" required></textarea> <br>
 
             <input type="submit" value="Send message">
           </form>
