--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       You can find me here!
     </p>
   <div class="social-media">
-      <img src="img/githubicon.svg" alt="Github">
+    <a href="https://github.com/Emmanuelnz" target="_blank">
+      <img src="img/githubicon.svg" target="_blank" alt="Github">
       <img src="img/linkedinicon.svg" alt="LinkedIn">
     <br>
   </div>
