--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
   <div class="social-media">
     <a href="https://github.com/Emmanuelnz" target="_blank">
       <img src="img/githubicon.svg" target="_blank" alt="Github">
-      <img src="img/linkedinicon.svg" alt="LinkedIn">
+    <a href="https://www.linkedin.com" target="_blank">
+      <img src="img/linkedinicon.svg" target ="_blank" alt="LinkedIn">
     <br>
   </div>
   </footer>
