--- a/work.html
+++ b/work.html
@@ -63,10 +63,12 @@
     <p>
       You can find me here!
     </p>
-  <div class="social-media">
-      <img src="img/githubicon.svg" alt="Github">
-      <img src="img/linkedinicon.svg" alt="LinkedIn">
-  </div>
+    <div class="social-media">
+      <a href="https://github.com/Emmanuelnz" target="_blank">
+        <img src="img/githubicon.svg" target="_blank" alt="Github">
+      <a href="https://www.linkedin.com" target="_blank">
+        <img src="img/linkedinicon.svg" target ="_blank" alt="LinkedIn">
+    </div>
     </footer>
 
 
