added link to icons

--- a/about.html
+++ b/about.html
@@ -676,8 +676,11 @@
         You can find me here!
       </p>
       <div class="social-media">
-        <img src="img/githubicon.svg" alt="Github">
-        <img src="img/linkedinicon.svg" alt="LinkedIn">
+        <a href="https://github.com/Emmanuelnz" target="_blank">
+          <img src="img/githubicon.svg" target="_blank" alt="Github">
+        <a href="https://www.linkedin.com" target="_blank">
+          <img src="img/linkedinicon.svg" target ="_blank" alt="LinkedIn">
+        <br>
       </div>
     </footer>
 
