updated title and text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-  <body>
+  <body class="index-body">
 
     <header class="page-header">
         <img src="img/emmanuel.png" alt="logo" class="page-header_item">
@@ -21,7 +21,7 @@
             <a href="index.html" role="menuitem" class="navigation-list_item navigation-list_item--active">Home</a>
           </li>
           <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list_item">About me</a>
+            <a href="about.html" role="menuitem" class="navigation-list_item">About</a>
           </li>
           <li role="presentation">
             <a href="work.html" role="menuitem" class="navigation-list_item navigation-list__item--active">Work</a>
@@ -32,16 +32,18 @@
         </ul>
     </nav>
     </header>
+    
     <main>
     <div class="profile">
       <img src="img/stockimg.jpg" class="profile_portrait" alt="Portrait of me">
       <h1>Hello World!</h1>
       <p>
-      My name is Emmanuel Nunez. I am a <span>web</span> developer from Indiana.
+      My name is Emmanuel Nunez and I like to make <span>stuff</span> on the Web.
       </p>
       <a href="#">Check out some of my code!</a>
     </div>
   </main>
+
     <footer class="page-footer">
     <p>
       You can find me here!
