--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-  <body>
+  <body class="contact-body">
 
     <header class="page-header">
         <img src="img/emmanuel.png" alt="logo" class="page-header_item">
