--- a/contact.html
+++ b/contact.html
@@ -42,11 +42,11 @@
         </a>
         <br>
         <a
-        href="mailto:emmanuelnun75@gmail.com">Contact me
+        href="mailto:emmanuelnun75@gmail.com">Email me
         </a>
 
       </div>
-        <div class="main-content">
+        <div class="contact-form">
           <form action="#" method="post" id="contact-form">
             <label class="standard-label" for="contact-email">Email: </label> <br>
             <input type="email" id="contact-email" required> <br>
