--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-------------------- Index / Home   -------------------->
     <div class="profile">
       <h1 class="intro-title">Hello. I am <br> Emmanuel</h1>
-        <p class="sub-intro">I like to make stuff on the web:)</p>
+        <p class="sub-intro">I like to make stuff on the web :)</p>
     </div>
     <!-------------------- End of Index / Home   -------------------->
     <div class="in-betweens" id="work">
@@ -769,7 +769,7 @@
               <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="myFlix-Angular-ModalLabel">myFlix-React</h1>
+                    <h1 class="modal-title fs-5" id="myFlix-Angular-ModalLabel">myFlix-Angular</h1>
                     <button 
                       type="button" 
                       class="btn-close" 
@@ -906,7 +906,7 @@
     <div class="about-card card" style="max-width: 70%;">
       <div class="about-card-body card-body">
         <p class="card-text"> 
-          My name is Emmanuel. I'm 19 years old and I really enjoy seeing things come together along with my free time. I like challenges as much as the next guy, but what really gets me going is the feeling of making progress. I'm also a minimalist. I like to keep things simple, clean and easy to manage; "Less is more". Those attributes are also seen in my code. Once I set my mind to something, I'm determined to see it through to the end. I find myself working for hours without breaks when a project really peaks my interest.
+          My name is Emmanuel. I'm 19 years old and I really enjoy seeing things come together. I'm a minimilist and believe that less is more. I prefer things to be simple and efficient as opposed to things being over the top/cluttered and messy. These ideas can be seen in my code as well. I also really like my free time and being outside. I was looking for a job that would grant me some freedom and allow me to get creative. Although, honestly speaking, my primary concern isn't my pay but my time and freedom. I really don't like having to work weekends and holidays to meet an absurd deadline or goal. After some trail and error I found coding. I really enjoyed seeing and being involved in an apps/sites development process. I'm aiming to work hard enough to achieve a skill level that offers a decent position in the field where my career expectations can be met. 
         </p>
       </div>
     </div>
