updated project info

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                     <li>Node.js</li>
                     <li>Mongo & MongoDB</li>
                     <li>PostgreSQL</li>
+                    <li>Parcel</li>
                     <li>Git</li>
                     <li>HTML 5</li>
                     <li>SCSS</li>
@@ -166,10 +167,10 @@
               </dd> <br>
               <dt>Project Difficulties</dt> <br>
               <dd>
-                This project really forced me to get <span>creative</span> and look for different <span>solutions</span> that wouldn't affect the rest of the project and hold up long term. The biggest <span>issue</span> was getting the project to successfully upload without crashing after continued use. I reached out to my superiors and looked at my classmates work for reference, but unfortunately didn't get very far.
+                This project really forced me to get <span>creative</span> and look for different <span>solutions</span> that wouldn't affect the rest of the project and hold up long term. The biggest <span>issue</span> was getting the project to successfully upload without crashing after continued use. <br> <br>I reached out to my superiors, looked at my classmates work for reference, and searched for any issues similar to mine. Unfortunately, I wasn't able to find anything that could at could help me.
               </dd> <br>
               <dt>My Solution</dt> <br>
-                After some wasted time trying out different solutions and reaching out for help, I called it quits and restarted. I transferred my code over to a new project and reinstalled all packages. The code then successfully uploaded and didn't crash after prolong use. The feeling was euphoric.
+                After some time of trying out different solutions and reaching out for help, I called it quits and restarted. I transferred my code over to a <span>new</span> project and <span>reinstalled</span> everything individually. <br> <br> I also <span>deleted</span> the previous deployment attempt and any data associated with it. I then <span>initiated</span> a new deployment, made sure everything was up to date, and tried uploading once more. It was finally successfully uploaded and working after prolonged use.  
               <dd>
               </dd> <br>  
               <dt>Features</dt> <br>
