fixed issues with mobile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </head>
 
-  <body data-bs-spy="scroll" data-bs-target=".main-navigation">
+  <body data-bs-spy="scroll" data-bs-target=".main-navigation" style="background-image: url('img/white-marble.jpg');">
     <header class="page-header">
       <nav class="main-navigation page-header_item">
         <ul role="menubar" class="navigation-list">
@@ -38,7 +38,7 @@
           </li>
           <li role="presentation">
             <a 
-              href="#work" 
+              href="#projects" 
               role="menuitem" 
               class="navigation-list_item">
               <button type="button" class="btn btn-outline-dark">
@@ -70,17 +70,17 @@
       </nav>
     </header>
     
-    <main>
+    
     <!------------------------ Index / Home ------------------------>
     <div class="profile" id="home">
       <h1 class="intro-title">Hello. I am <br> Emmanuel</h1>
         <p class="sub-intro">I like to make stuff on the web :)</p>
     </div>
     <!------------------------ End of Index / Home ------------------------>
-    <div class="in-betweens" id="work">
+    <div class="in-betweens" id="projects">
       <div>
-        <h1>PROJECTS</h1>
-      </div>
+        <h1>Projects</h1>
+      </div> 
     </div>
     <!------------------------ Projects ------------------------>
     <div class="project-background"> 
@@ -219,7 +219,7 @@
     <!------------------------ End of "About Me" ------------------------>
     <div class="in-betweens" id="contact">
       <div>
-        <h1>C O N T A C T</h1>
+        <h1>CONTACT</h1>
       </div> 
     </div>
     <!------------------------ Contact ------------------------>
@@ -293,7 +293,7 @@
       </div>
     </div>
     <!------------------------ End of Contact ------------------------>
-  </main>
+  
 
   <footer>
     <a 
